_k8s/service.yml
# Sevice
apiVersion: v1
kind: Service
metadata:
  name: deck-watch
  labels:
    app: deck-watch
spec:
  externalTrafficPolicy: Cluster
  ports:
  - name: metrics
    port: 9143
    protocol: TCP
    targetPort: 80
  selector:
    app: deck-watch
  sessionAffinity: None
  type: NodePort
