_k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: deck-watch
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - http:
      paths:
      - path: /deck-watch
        backend:
          serviceName: deck-watch
          servicePort: metrics
